gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/test16116.d
version https://git-lfs.github.com/spec/v1
oid sha256:e91c44b0d94fb9c610d787be60e34c6bfd66762d615d7ead962e1fade6002d79
size 274
